--- a/Style.css
+++ b/Style.css
@@ -40,9 +40,10 @@ body {
     from{transform: translateY(60rem); opacity: 0%;}
 }
 
-
-
-
+#aimg {
+    position: relative;
+    left: 2rem;
+}
 
 img {
     width: 25px;
@@ -1059,7 +1060,7 @@ input {
 
     .BodyImage {
         position: relative;
-        left: 15rem;
+        left: 17rem;
         width: 0;
     }
 
@@ -1214,7 +1215,7 @@ input {
 
     .Fa-icons {
         position: relative;
-        left: -6rem;
+        left: -4rem;
         width: 0;
     }
 
@@ -1350,8 +1351,8 @@ input {
         position: relative;
         top: -1rem;
         left: -1rem;
-        width: 350px;
-        height: 300px;
+        width: 405px;
+        height: 305px;
     }
 
     #A3 {
