--- a/Style.css
+++ b/Style.css
@@ -103,6 +103,10 @@ a {
     color: azure;
 }
 
+#l1:hover {
+    color: aqua;
+}
+
 
 .sidebar {
     position: fixed;
@@ -381,8 +385,7 @@ i {
     position: relative;
     right: 12rem;
 }
-
-.WELCOME {
+#WELCOME {
     position: relative;
     top: 14rem;
     right: 3rem;
@@ -774,7 +777,7 @@ i {
     margin-top: 1rem;
 }
 
-.VIDINP {
+#VIDINP {
     position: relative;
     top: 55rem;
     left: -14rem;
@@ -1180,7 +1183,7 @@ input {
         top: -0.5rem;
     }
 
-    .WELCOME {
+    #WELCOME {
         position: relative;
         font-size: 11px;
         top: 19rem;
@@ -1250,7 +1253,7 @@ input {
     .Food-list {
         position: relative;
         top: 29rem;
-        left: -18rem;
+        left: -16.9rem;
     }
 
     .Food-list2 {
@@ -1330,10 +1333,10 @@ input {
         height: 8rem;
     }
 
-    .VIDINP {
+    #VIDINP {
         position: relative;
         top: 43rem;
-        left: 1.7rem;
+        left: 3rem;
     }
 
     .Form {
