--- a/Style.css
+++ b/Style.css
@@ -153,7 +153,8 @@ b {
 
 .BodyImage {
     position: relative;
-    left: 17rem;
+    left: 20rem;
+    top: -2rem;
 }
 
 #btn1 {
@@ -1570,3 +1571,4 @@ input {
         left: 3.5rem;
     }
 }
+
